<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_get_heartrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/vs_hr"
            android:focusable="false"
            android:text="@string/get_heartrate" />

        <ImageButton
            android:id="@+id/img_heartrateConfidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/conf_empty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_heartrateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="15"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical|right"
                android:hint="@string/editText_heartrateHint" >

            </EditText>

            <TextView
                android:id="@+id/unitHR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="20dp"
                android:text="@string/units_heartrate"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="20dp" >

        <Button
            android:id="@+id/button_get_respiratoryrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/vs_rr"
            android:focusable="false"
            android:text="@string/get_respiratoryrate" />

        <ImageButton
            android:id="@+id/img_respiratoryrateConfidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/conf_empty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_respiratoryrateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="15"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical|right"
                android:hint="@string/editText_respiratoryrateHint" >

            </EditText>

            <TextView
                android:id="@+id/unitRR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/units_respiratoryrate"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_get_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/vs_temp"
            android:focusable="false"
            android:text="@string/get_temperature" />

        <ImageButton
            android:id="@+id/img_temperatureConfidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/conf_empty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_temperatureField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="15"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical|right"
                android:hint="@string/editText_temperatureHint" >

            </EditText>

            <TextView
                android:id="@+id/unitTEMP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="20dp"
                android:text="@string/units_temperature"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_get_oxygensaturation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/vs_spo2"
            android:focusable="false"
            android:text="@string/get_oxygensaturation" />

        <ImageButton
            android:id="@+id/img_oxygensaturationConfidence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/conf_empty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_oxygensaturationField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="15"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical|right"
                android:hint="@string/editText_oxygensaturationHint" >

            </EditText>

            <TextView
                android:id="@+id/unitSPO2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="20dp"
                android:text="@string/units_oxygensaturation"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_get_pulseoximetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/vs_spo2"
            android:focusable="false"
            android:text="@string/get_pulseoximetry" />
    </LinearLayout>

</LinearLayout>